force-app/main/default/objects/Relationship_History__c/Relationship_History__c.object-meta.xml
<CustomObject>
    <label>Relationship History</label>
    <nameField>
        <label>Relationship History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>