force-app/main/default/objects/Relationship_History__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>When the event occurred</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>