force-app/main/default/objects/Relationship_History__c/fields/Relationship_Profile__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Profile__c</fullName>
    <label>Relationship Profile</label>
    <referenceTo>Relationship_Profile__c</referenceTo>
    <relationshipLabel>Relationship Histories</relationshipLabel>
    <relationshipName>Relationship_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>