force-app/main/default/objects/Relationship_History__c/validationRules/Event_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Not_Future</fullName>
    <active>true</active>
    <description>The event date cannot be in the future.</description>
    <errorConditionFormula>Event_Date__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Event Date cannot be in the future.</errorMessage>
</ValidationRule>