force-app/main/default/objects/Relationship_History__c/validationRules/Summary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Summary_Required</fullName>
    <active>true</active>
    <description>Summary field is required</description>
    <errorConditionFormula>ISBLANK(Summary__c)</errorConditionFormula>
    <errorDisplayField>Summary__c</errorDisplayField>
    <errorMessage
  >Please provide a summary for this history event.</errorMessage>
</ValidationRule>